# internal/modules/builder/form/route.go
@@ -8,6 +8,6 @@ func RegisterRoutes(rg *gin.RouterGroup, h IHandler) {
 	rg.GET("/:id", h.GetFormWithFields)
 	// rg.POST("/sync", h.Sync)
 	rg.POST("", h.CreateFormWithFields)
-	rg.PATCH("/:id/update", h.UpdateFormWithFields)
+	rg.PATCH("/:id", h.UpdateFormWithFields)
 	rg.DELETE("/:id", h.Delete)
 }
